--- a/single-article.html
+++ b/single-article.html
@@ -44,7 +44,8 @@
       <div class="container">
         <div class="c-header__inner">
           <div class="c-header__brand">
-            <a class="c-logo" href="index.html" aria-label="العودة للرئيسية">SALEH-AL-AROURI</a>
+            <a class="c-logo" href="index.html" aria-label="العودة للرئيسية"><img src="assets/images/logo.png"
+                alt=""></a>
           </div>
 
           <nav class="c-nav" aria-label="روابط القسم الرئيسي">
@@ -84,7 +85,7 @@
       <div class="offcanvas-header c-offcanvas__header">
         <div class="c-offcanvas__brand">
           <span id="offcanvasMenuLabel" class="c-offcanvas__title">القائمة</span>
-          <a class="c-offcanvas__logo" href="index.html">SALEH-AL-AROURI</a>
+          <a class="c-offcanvas__logo" href="index.html"><img src="assets/images/logo.png" alt=""></a>
         </div>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="إغلاق القائمة"></button>
       </div>
@@ -398,7 +399,7 @@
       <div class="container">
         <div class="c-footer__grid">
           <div class="c-footer__brand">
-            <a class="c-footer__logo" href="index.html">SALEH-AL-AROURI</a>
+            <a class="c-footer__logo" href="index.html"><img src="assets/images/logo.png" alt=""></a>
             <p class="c-footer__desc">
               أرشيف توثيقي مستقل يجمع الصورة والصوت والنص
               في سياق واحد يحفظ الذاكرة ويمنع تشويه السرد
