--- a/timeline.html
+++ b/timeline.html
@@ -38,7 +38,7 @@
       <div class="container">
         <div class="c-header__inner">
           <div class="c-header__brand">
-            <a class="c-logo" href="index.html" aria-label="العودة للرئيسية">SALEH-AL-AROURI</a>
+            <a class="c-logo" href="index.html" aria-label="العودة للرئيسية"><img src="assets/images/logo.png" alt=""></a>
           </div>
 
           <nav class="c-nav" aria-label="روابط القسم الرئيسي">
@@ -80,7 +80,7 @@
       <div class="offcanvas-header c-offcanvas__header">
         <div class="c-offcanvas__brand">
           <span id="offcanvasMenuLabel" class="c-offcanvas__title">القائمة</span>
-          <a class="c-offcanvas__logo" href="index.html">SALEH-AL-AROURI</a>
+          <a class="c-offcanvas__logo" href="index.html"><img src="assets/images/logo.png" alt=""></a>
         </div>
 
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="إغلاق القائمة"></button>
@@ -773,7 +773,7 @@
           <!-- Brand -->
           <div class="c-footer__brand">
             <a class="c-footer__logo" href="index.html">
-              SALEH-AL-AROURI
+              <img src="assets/images/logo.png" alt="">
             </a>
             <p class="c-footer__desc">
               أرشيف توثيقي مستقل يجمع الصورة والصوت والنص
