Signed-off-by: Eslam abselnasser <96479431+imsemoo@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg">
           <div class="modal-content c-modal__inner">
             <div class="modal-body">
-              <button type="button" class="c-modal__close" data-bs-dismiss="modal" aria-label="إغلاق">&times;</button>
+              <button type="button" class="c-modal__close" data-bs-dismiss="modal" aria-label="إغلاق"><i class="fa-solid fa-xmark"></i></button>
 
               <p class="u-muted" style="margin:0" data-qm-chip></p>
               <h3 class="c-card__title" style="margin-top:10px" data-qm-title>اقتباس</h3>
