--- a/single-article.html
+++ b/single-article.html
@@ -445,7 +445,8 @@
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content c-modal__inner">
           <div class="modal-body">
-            <button type="button" class="c-modal__close" data-bs-dismiss="modal" aria-label="إغلاق">&times;</button>
+            <button type="button" class="c-modal__close" data-bs-dismiss="modal" aria-label="إغلاق"><i
+                class="fa-solid fa-xmark"></i></button>
 
             <h3 class="c-card__title" data-modal-title-target>عرض الوسائط</h3>
             <p class="u-muted" data-modal-description-target>كل مادة يتبعها سياق ومصدر عند توفره</p>
