Signed-off-by: Eslam abselnasser <96479431+imsemoo@users.noreply.github.com>

--- a/media.html
+++ b/media.html
@@ -488,6 +488,27 @@
                 </div>
               </div>
             </article>
+            <article class="c-media-card" role="button" tabindex="0" data-media-card data-media-type="reel"
+              data-media-title="لقطة عمودية قصيرة" data-media-year="2021" data-media-date="2021-11-03"
+              data-modal-title="لقطة عمودية قصيرة" data-modal-description="مادة عمودية للهواتف ضمن توثيق سريع"
+              data-modal-badge="ريل" data-modal-timestamp="3 نوفمبر 2021" data-modal-source="مصدر عند توفره"
+              data-modal-image="assets/images/videos/thumb1.jpg" data-modal-video="assets/videos/reel1.mp4">
+              <div class="c-media-card__media u-aspect-9x16">
+                <img src="assets/images/videos/thumb1.jpg" alt="لقطة عمودية قصيرة" loading="lazy" />
+                <div class="c-media-card__overlay">
+                  <span class="c-media-card__play" aria-hidden="true"><i class="fa-solid fa-play"></i></span>
+                </div>
+                <div class="c-media-card__badge"><span class="c-badge c-badge--reel">ريلز</span></div>
+              </div>
+              <div class="c-media-card__content">
+                <h3 class="c-media-card__title">لقطة عمودية قصيرة</h3>
+                <p class="u-muted">2021</p>
+                <div class="c-media-card__details">
+                  <span>ريلز</span>
+                  <span class="u-muted">تفاصيل</span>
+                </div>
+              </div>
+            </article>
           </div>
 
           <div class="c-empty u-hide" data-empty="reel">لا توجد ريلز حاليا</div>
@@ -516,6 +537,24 @@
 
           <div class="c-media-grid c-media-grid--photos" data-grid="photo">
             <!-- PHOTO CARD -->
+            <article class="c-media-card" role="button" tabindex="0" data-media-card data-media-type="photo"
+              data-media-title="صورة أرشيفية" data-media-year="2012" data-media-date="2012-05-04"
+              data-modal-title="صورة أرشيفية" data-modal-description="صورة ضمن توثيق مرحلة زمنية"
+              data-modal-badge="صورة" data-modal-timestamp="4 مايو 2012" data-modal-source="مصدر عند توفره"
+              data-modal-image="assets/images/videos/thumb1.jpg">
+              <div class="c-media-card__media">
+                <img src="assets/images/videos/thumb1.jpg" alt="صورة أرشيفية" loading="lazy" />
+                <div class="c-media-card__badge"><span class="c-badge c-badge--photo">صورة</span></div>
+              </div>
+              <div class="c-media-card__content">
+                <h3 class="c-media-card__title">صورة أرشيفية</h3>
+                <p class="u-muted">2012</p>
+                <div class="c-media-card__details">
+                  <span>صورة</span>
+                  <span class="u-muted">تفاصيل</span>
+                </div>
+              </div>
+            </article>
             <article class="c-media-card" role="button" tabindex="0" data-media-card data-media-type="photo"
               data-media-title="صورة أرشيفية" data-media-year="2012" data-media-date="2012-05-04"
               data-modal-title="صورة أرشيفية" data-modal-description="صورة ضمن توثيق مرحلة زمنية"
