Signed-off-by: Eslam abselnasser <96479431+imsemoo@users.noreply.github.com>

--- a/media.html
+++ b/media.html
@@ -143,45 +143,53 @@
               </p>
             </div>
 
-            <!-- KPI summary (manual numbers later) -->
-            <div class="c-media-kpis" aria-label="ملخص سريع">
-              <div class="c-kpi">
-                <div class="c-kpi__icon" aria-hidden="true"><i class="fa-regular fa-images"></i></div>
-                <div>
-                  <div class="c-kpi__num">
+
+            <div class="c-hero__stats c-media-kpis" role="list" aria-label="ملخص سريع للأرشيف" data-stats>
+              <div class="c-stat" role="listitem">
+                <div class="c-stat__icon" aria-hidden="true">
+                  <i class="fa-regular fa-images"></i>
+                </div>
+                <div class="c-stat__body">
+                  <span class="c-stat__num">
                     <span class="c-counter" data-count-to="320" data-prefix="+" data-suffix=""></span>
-                  </div>
-                  <span class="c-kpi__label">صور</span>
+                  </span>
+                  <span class="c-stat__label">صورة</span>
                 </div>
               </div>
 
-              <div class="c-kpi">
-                <div class="c-kpi__icon" aria-hidden="true"><i class="fa-solid fa-circle-play"></i></div>
-                <div>
-                  <div class="c-kpi__num">
+              <div class="c-stat" role="listitem">
+                <div class="c-stat__icon" aria-hidden="true">
+                  <i class="fa-solid fa-circle-play"></i>
+                </div>
+                <div class="c-stat__body">
+                  <span class="c-stat__num">
                     <span class="c-counter" data-count-to="85" data-prefix="+" data-suffix=""></span>
-                  </div>
-                  <span class="c-kpi__label">فيديو</span>
+                  </span>
+                  <span class="c-stat__label">فيديو</span>
                 </div>
               </div>
 
-              <div class="c-kpi">
-                <div class="c-kpi__icon" aria-hidden="true"><i class="fa-solid fa-mobile-screen-button"></i></div>
-                <div>
-                  <div class="c-kpi__num">
+              <div class="c-stat" role="listitem">
+                <div class="c-stat__icon" aria-hidden="true">
+                  <i class="fa-solid fa-mobile-screen-button"></i>
+                </div>
+                <div class="c-stat__body">
+                  <span class="c-stat__num">
                     <span class="c-counter" data-count-to="40" data-prefix="+" data-suffix=""></span>
-                  </div>
-                  <span class="c-kpi__label">ريلز</span>
+                  </span>
+                  <span class="c-stat__label">ريلز</span>
                 </div>
               </div>
 
-              <div class="c-kpi">
-                <div class="c-kpi__icon" aria-hidden="true"><i class="fa-solid fa-wave-square"></i></div>
-                <div>
-                  <div class="c-kpi__num">
+              <div class="c-stat" role="listitem">
+                <div class="c-stat__icon" aria-hidden="true">
+                  <i class="fa-solid fa-wave-square"></i>
+                </div>
+                <div class="c-stat__body">
+                  <span class="c-stat__num">
                     <span class="c-counter" data-count-to="60" data-prefix="+" data-suffix=""></span>
-                  </div>
-                  <span class="c-kpi__label">صوتيات</span>
+                  </span>
+                  <span class="c-stat__label">صوتيات</span>
                 </div>
               </div>
             </div>
